creusot/tests/should_fail/prusti/at_expiry/no_param.stderr
error: at must be given an explicit region
 --> no_param.rs:4:20
  |
4 | #[after_expiry('a, at(true))]
  |                    ^^^^^^^^

error: aborting due to 1 previous error

